Fixed long checkbox alignment

--- a/src/sass/components/_checkbox.scss
+++ b/src/sass/components/_checkbox.scss
@@ -58,6 +58,7 @@
 
     display: flex;
     flex-flow: row nowrap;
+    align-items: center;
 
     @include themes.themify {
         color: themes.color("on-surface");
